--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@
 
 * {
     font-family: 'Inter', sans-serif;
-    background: #F3F5FC;
+    /* background: #F3F5FC; */
+}
+
+body{
+    background: linear-gradient(180deg, rgba(128, 179, 242, 0.43) 0%, #E3E8F9 84.9%) no-repeat center center fixed;
 }
 
 main {
@@ -21,12 +25,14 @@ main {
 .text-area {
     position: absolute;
     left: 12vw;
-    top: 23vh;
+    top: 10vh;
     border: none;
     width: 45vw;
-    height: 6.5vh;
+    height: 60vh;
     font-weight: bolder;
     font-size: 1.5rem;
+    outline: none;
+    background-color: #ffffff00;
 }
 
 .warning-container {
@@ -44,7 +50,6 @@ main {
 }
 
 button {
-    background-color: aqua;
     border-radius: 1.5rem;
     width: 22vw;
     height: 8vh;
@@ -62,22 +67,54 @@ button {
     color: #0A3871;
 }
 
-.message-container {
+.message-container{
     position: absolute;
     top: 5vh;
     width: 27.2vw;
-    height: 90vh;
-    background-color: #ffffff;
-    border-radius: 2.5vw;
-    box-shadow: 0px 1.87vh 2.5vw -0.62vw rgba(0, 0, 0, 0.08);
+    height: 85vh;
+    background: rgba( 255, 255, 255, 0.25 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 4px );
+-webkit-backdrop-filter: blur( 4px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+
+.output-text {
+    display: none;
+    position: absolute;
+    top: 4vh;
+    left: 1.02vw;
+    width: 25.1vw;
+    height: 60vh;
+    border: none;
+    background-color: #ffffff00;
+    font-size: 1.5rem;
+    text-align:center;
+    outline: none;
+}
+
+.button-copy {
+    position: absolute;
+    top: 70vh;
+    left: 1.02vw;
+    background-color: #0A3871;
+    color: #ffffff;
+    display: none;
+}
+.message {
+    display: none;
+    position: absolute;
+    top: 5vh;
+    left: 1vw;
+    width: 25vw;
+    height: 85vh;
+    
+    border: none;
 }
 
 /* WIP */
-.message-container p,
-.message-img,
-h2 {
-    background: #ffffff;
-}
 
 /* WIP */
 
