--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 
-.logo {
-    width: 9.3vw;
-    height: 6.5vh;
-    padding-top: 1.3vh;
-    margin-left: 3.1vw;
-}
-
 * {
     font-family: 'Inter', sans-serif;
-    /* background: #F3F5FC; */
 }
 
-body{
+body {
     background: linear-gradient(180deg, rgba(128, 179, 242, 0.43) 0%, #E3E8F9 84.9%) no-repeat center center fixed;
+}
+
+.logo {
+    position: absolute;
+    width: 6vw;
+    height: 6vh;
+    padding-top: 1.3vh;
+    left: 1.5vw;
 }
 
 main {
@@ -62,24 +62,34 @@ button {
     color: #ffffff;
 }
 
+.button-encriptar:hover,
+.button-copy:hover {
+    background-color: #0a3871b2;
+    border: 1px solid #0a387175;
+}
+
 .button-desencriptar {
     background-color: #D8DFE8;
     color: #0A3871;
 }
 
-.message-container{
-    position: absolute;
-    top: 5vh;
-    width: 27.2vw;
-    height: 85vh;
-    background: rgba( 255, 255, 255, 0.25 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 4px );
--webkit-backdrop-filter: blur( 4px );
-border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 );
+.button-desencriptar:hover {
+    background-color: #d8dfe87c;
+    border: 1px solid #0a387175;
 }
 
+.message-container {
+    position: absolute;
+    top: 7vh;
+    width: 27.2vw;
+    height: 85vh;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 0.6vw 2.5vw 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(0.31vw);
+    -webkit-backdrop-filter: blur(0.31vw);
+    border-radius: 2vw;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+}
 
 .output-text {
     display: none;
@@ -91,7 +101,7 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
     border: none;
     background-color: #ffffff00;
     font-size: 1.5rem;
-    text-align:center;
+    text-align: center;
     outline: none;
 }
 
@@ -103,20 +113,6 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
     color: #ffffff;
     display: none;
 }
-.message {
-    display: none;
-    position: absolute;
-    top: 5vh;
-    left: 1vw;
-    width: 25vw;
-    height: 85vh;
-    
-    border: none;
-}
-
-/* WIP */
-
-/* WIP */
 
 .message-img {
     margin-top: 8vh;
@@ -132,4 +128,178 @@ h2 {
     text-align: center;
     font-weight: 700;
     font-size: 1.2rem;
+}
+
+footer {
+    position:fixed;
+    bottom:0;
+    left:0;
+    right:0;
+    width:100%;
+    height:5vh;
+}
+
+footer img {
+    width: 0.9vw;
+    height: 1.7vh;
+    margin: 0 0.5vw 0 0;
+}
+
+footer p{
+    font-size: 0.5rem;
+    margin: 0.4vw 0.5vw 20vw 0;
+}
+
+.datos-footer{
+    display: flex;
+    justify-content: center;
+}
+
+/* TABLET */
+
+@media (max-width:1024px) and (min-width:768px){
+    .logo {
+        width: 10vw;
+        top: 1vh;
+    }
+    main {
+        display: block;
+    }
+    
+    .text-area {
+        top: 15vh;
+        width: 90vw;
+        height: 10vh;
+    }
+    .warning-container {
+        top: 70vh;
+        left: 12vw;
+        margin: 0;
+    }
+    
+    .buttons-container {
+        position: absolute;
+        width: 80vw;
+        display: flex;
+        justify-content: center;
+    }
+
+    button {
+        width: 45vw;
+        border-radius: 2.9vw;
+    }
+
+    .text-area {
+        width: 60vw;
+        font-size: 1rem;
+    }
+
+    .section-two {
+        height: 170vh;
+    }
+    
+    .message-container {
+        top: 95vh;
+        width: 75vw;
+        height: 65vh;
+        left:15vw;
+    }
+
+    .insert-text-container {
+        display: none;
+    }
+    
+    .output-text {
+        top: 1vh;
+        left:1vw;
+        width: 72vw;
+        height: 46vh;
+    }
+    
+    .button-copy {
+        top: 50vh;
+        left: 12vw;
+    }
+    
+    footer {
+       display: none;
+    }
+
+}
+
+
+/* CELULAR */
+@media (max-width:767px){
+
+    .logo {
+        position: absolute;
+        width: 18vw;
+        height: 20vh;
+        top: -2vh;
+        left: 1vw;
+        padding: 0;
+    }
+    main {
+        display: block;
+    }
+    
+    .text-area {
+        top: 15vh;
+        width: 80vw;
+        height: 60vh;
+    }
+    .warning-container {
+        top: 70vh;
+        left: 12vw;
+        margin: 0;
+    }
+    
+    .buttons-container {
+        position: absolute;
+        width: 80vw;
+        display: flex;
+        justify-content: center;
+    }
+
+    button {
+        width: 45vw;
+        border-radius: 2.9vw;
+    }
+
+    .text-area {
+        width: 60vw;
+        font-size: 1rem;
+    }
+
+    .section-two {
+        height: 170vh;
+    }
+    
+    .message-container {
+        top: 95vh;
+        width: 75vw;
+        height: 65vh;
+        left:15vw;
+    }
+
+    .insert-text-container {
+        display: none;
+    }
+    
+    .output-text {
+        top: 1vh;
+        left:1vw;
+        width: 72vw;
+        height: 46vh;
+    }
+    
+    .button-copy {
+        top: 50vh;
+        left: 12vw;
+    }
+    
+    footer {
+       display: none;
+    }
+
 }
